--- a/src/app/shared/components/tag/tag.component.scss
+++ b/src/app/shared/components/tag/tag.component.scss
@@ -5,3 +5,7 @@ span {
 	border-radius: 5px;
 	font-size: 13px;
 }
+.dark {
+	background-color: colors.$academic-blue;
+	color: colors.$crystal-white;
+}
